[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://touch_controls.gd" id="1_touch"]

[node name="TouchControls" type="CanvasLayer"]
layer = 10
script = ExtResource("1_touch")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="JoystickBase" type="ColorRect" parent="Container"]
layout_mode = 0
offset_left = 40.0
offset_top = 400.0
offset_right = 200.0
offset_bottom = 560.0
color = Color(0.2, 0.2, 0.2, 0.5)

[node name="JoystickKnob" type="ColorRect" parent="Container/JoystickBase"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 110.0
offset_bottom = 110.0
color = Color(0.8, 0.8, 0.8, 0.8)

[node name="AttackButton" type="Button" parent="Container"]
layout_mode = 0
offset_left = 1050.0
offset_top = 420.0
offset_right = 1130.0
offset_bottom = 500.0
text = "ATK"

[node name="JumpButton" type="Button" parent="Container"]
layout_mode = 0
offset_left = 1140.0
offset_top = 340.0
offset_right = 1220.0
offset_bottom = 420.0
text = "JMP"

[node name="EatButton" type="Button" parent="Container"]
layout_mode = 0
offset_left = 1140.0
offset_top = 500.0
offset_right = 1220.0
offset_bottom = 580.0
text = "EAT"
